styles/main.css
h1, h2, h3, p, .btn {
	font-family: 'Lato', sans-serif;
}

.navbar-brand {
  padding-top: 10px;
}

.navbar-brand img {
  max-height: 60px !important;
}

.navbar {
  padding-bottom: 10px;
  border: none;
}

.navbar li, .navbar input, .navbar button {
	font-family: 'Lato', sans-serif;
	margin-top: 17px;
}

.navbar li {
	font-size: 12pt;
}

.jumbotron {
	margin-bottom: 0px;
	padding-top: 30px;
	padding-bottom: 30px;
	background-color: #700134;
}

.jumbotron h1, .jumbotron h2 {
	padding-top: 0px;
	margin-top: 0px;
}

.jumbotron h1, .jumbotron h2, .jumbotron h3, .jumbotron p {
	color: #FFFFFF;
}

.navbar-default .navbar-nav > .active > a, 
.navbar-default .navbar-nav > .active > a:hover, 
.navbar-default .navbar-nav > .active > a:focus {
    color: #000000;
    background-color: #F8F8F8;
    border-bottom: solid 1px #700134;
}

#home_body {
	padding-top: 30px;
}

#home_body h3 {
	margin-top: 0px;
}

html,
body {
   margin:0;
   padding:0;
   height:100%;
}

#wrapper {
   min-height:100%;
   position:relative;
}

#footer {
   position:absolute;
   bottom:0;
   width:100%;
   min-height: 10px;
   background:#F8F8F8;
}

.footer p {
	text-align: center;
	color: ##9F9999;
	padding-top: 15px;
	margin-bottom: 0px;
	padding-bottom: 15px;
	/*border-color: #000000;
	border-style: solid;*/

}

.btn-blue { 
  color: #FFFFFF; 
  background-color: #2E7582; 
  border-color: #2E7582; 
} 
 
.btn-blue:hover, 
.btn-blue:focus, 
.btn-blue:active, 
.btn-blue.active, 
.open .dropdown-toggle.btn-blue { 
  color: #FFFFFF; 
  background-color: #1A626F; 
  border-color: #2E7582; 
} 
 
.btn-blue:active, 
.btn-blue.active, 
.open .dropdown-toggle.btn-blue { 
  background-image: none; 
} 
 
.btn-blue.disabled, 
.btn-blue[disabled], 
fieldset[disabled] .btn-blue, 
.btn-blue.disabled:hover, 
.btn-blue[disabled]:hover, 
fieldset[disabled] .btn-blue:hover, 
.btn-blue.disabled:focus, 
.btn-blue[disabled]:focus, 
fieldset[disabled] .btn-blue:focus, 
.btn-blue.disabled:active, 
.btn-blue[disabled]:active, 
fieldset[disabled] .btn-blue:active, 
.btn-blue.disabled.active, 
.btn-blue[disabled].active, 
fieldset[disabled] .btn-blue.active { 
  background-color: #2E7582; 
  border-color: #2E7582; 
} 
 
.btn-blue .badge { 
  color: #2E7582; 
  background-color: #FFFFFF; 
}

.btn-gold { 
  color: #FFFFFF; 
  background-color: #B58C26; 
  border-color: #B58C26; 
} 
 
.btn-gold:hover, 
.btn-gold:focus, 
.btn-gold:active, 
.btn-gold.active, 
.open .dropdown-toggle.btn-gold { 
  color: #FFFFFF; 
  background-color: #8F6A0D; 
  border-color: #B58C26; 
} 
 
.btn-gold:active, 
.btn-gold.active, 
.open .dropdown-toggle.btn-gold { 
  background-image: none; 
} 
 
.btn-gold.disabled, 
.btn-gold[disabled], 
fieldset[disabled] .btn-gold, 
.btn-gold.disabled:hover, 
.btn-gold[disabled]:hover, 
fieldset[disabled] .btn-gold:hover, 
.btn-gold.disabled:focus, 
.btn-gold[disabled]:focus, 
fieldset[disabled] .btn-gold:focus, 
.btn-gold.disabled:active, 
.btn-gold[disabled]:active, 
fieldset[disabled] .btn-gold:active, 
.btn-gold.disabled.active, 
.btn-gold[disabled].active, 
fieldset[disabled] .btn-gold.active { 
  background-color: #B58C26; 
  border-color: #B58C26; 
} 
 
.btn-gold .badge { 
  color: #B58C26; 
  background-color: #FFFFFF; 
}

.btn-white { 
  color: #000000; 
  background-color: #F8F8F8; 
  border-color: #FFFFFF; 
} 
 
.btn-white:hover, 
.btn-white:focus, 
.btn-white:active, 
.btn-white.active, 
.open .dropdown-toggle.btn-white { 
  color: #000000; 
  background-color: #E0E0E0; 
  border-color: #FFFFFF; 
} 
 
.btn-white:active, 
.btn-white.active, 
.open .dropdown-toggle.btn-white { 
  background-image: none; 
} 
 
.btn-white.disabled, 
.btn-white[disabled], 
fieldset[disabled] .btn-white, 
.btn-white.disabled:hover, 
.btn-white[disabled]:hover, 
fieldset[disabled] .btn-white:hover, 
.btn-white.disabled:focus, 
.btn-white[disabled]:focus, 
fieldset[disabled] .btn-white:focus, 
.btn-white.disabled:active, 
.btn-white[disabled]:active, 
fieldset[disabled] .btn-white:active, 
.btn-white.disabled.active, 
.btn-white[disabled].active, 
fieldset[disabled] .btn-white.active { 
  background-color: #F8F8F8; 
  border-color: #FFFFFF; 
} 
 
.btn-white .badge { 
  color: #F8F8F8; 
  background-color: #000000; 
}

.btn-green { 
  color: #FFFFFF; 
  background-color: #367805; 
  border-color: #367805; 
} 
 
.btn-green:hover, 
.btn-green:focus, 
.btn-green:active, 
.btn-green.active, 
.open .dropdown-toggle.btn-green { 
  color: #FFFFFF; 
  background-color: #2D6105; 
  border-color: #367805; 
} 
 
.btn-green:active, 
.btn-green.active, 
.open .dropdown-toggle.btn-green { 
  background-image: none; 
} 
 
.btn-green.disabled, 
.btn-green[disabled], 
fieldset[disabled] .btn-green, 
.btn-green.disabled:hover, 
.btn-green[disabled]:hover, 
fieldset[disabled] .btn-green:hover, 
.btn-green.disabled:focus, 
.btn-green[disabled]:focus, 
fieldset[disabled] .btn-green:focus, 
.btn-green.disabled:active, 
.btn-green[disabled]:active, 
fieldset[disabled] .btn-green:active, 
.btn-green.disabled.active, 
.btn-green[disabled].active, 
fieldset[disabled] .btn-green.active { 
  background-color: #367805; 
  border-color: #367805; 
} 
 
.btn-green .badge { 
  color: #367805; 
  background-color: #FFFFFF; 
}

.left {
	float: left;
}

#map iframe {
	margin-top: 20px;
	width: 100%;
	height: 250px;
}

#map {
	padding-right: 0px;
	padding-left: 0px;
  padding-bottom: 15px;
}

.no-padding-or-margin {
	padding-bottom: 0px;
	margin-bottom: 0px;
}

.body {
/*	border: solid 1px #000000;
*/	padding-left: 30px;
	padding-bottom: 70px;
}

.clear {
	clear: both;
}

#jumbo {
	padding-right: 75px;
	padding-left: 75px;
}

hr {
	margin-top: 10px;
	margin-bottom: 0px;
}

#form {
	padding-bottom: 60px;
}

body {
	font-family: 'Lato', sans-serif;	
}

#calendar {
  padding-bottom: 70px;
}

#form {
	padding-bottom: 90px;
}

#apply {
	margin-left: 0px;
}

#paypal {
  padding-left:15px;
  height: 45px;
}

.photobanner {
  height: 245px;
  float: left;
  margin-left: 15px;
  margin-top: 15px;
}

#photobanner {
  padding-top: 15px;
  margin: 0px;
  padding-left: 0px;
  border: solid 1px #000000;
}

.module {
  padding-bottom: 15px;
}

